@@ -71,6 +71,8 @@ public:
 		{ paint_rle(win->get_ib8(), xoff, yoff); }
 	void paint_rle_translucent(Image_buffer8 *win, int xoff, int yoff,
 					Xform_palette *xforms, int xfcnt);
+	void paint_rle_transformed(Image_buffer8 *win, int xoff, int yoff,
+					Xform_palette xform);
 	void paint_rle_outline(Image_buffer8 *win, int xoff, int yoff,
 							unsigned char color);
 	int has_point(int x, int y);	// Is a point within the shape?
